--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
   <script src="media/system/js/caption.js" type="text/javascript"></script>
   <script src="templates/yousold/src/styles.js" type="text/javascript"></script>
   <script src="modules/mod_yousold_slider/src/yousold.js" type="text/javascript"></script>
+  
+<!-- Start of Async Callbell Code -->
+<script>
+	window.callbellSettings = {
+	  token: "cDVcdP1iYVbNgfb3oGXKeK8v"
+	};
+  </script>
+  <script>
+	(function(){var w=window;var ic=w.callbell;if(typeof ic==="function"){ic('reattach_activator');ic('update',callbellSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Callbell=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://dash.callbell.eu/include/'+window.callbellSettings.token+'.js';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()
+  </script>
+  <!-- End of Async Callbell Code -->
+  
+  
   <script type="text/javascript">
 
 		window.addEvent('domready', function() {
@@ -35,7 +48,9 @@
 			SqueezeBox.assign($$('a.modal'), {
 				parse: 'rel'
 			});
-		});var K2SitePath = 'index.html';window.addEvent('load', function() {
+		});
+var K2SitePath = 'index.html';
+window.addEvent('load', function() {
 				new JCaption('img.caption');
 			});
 				window.addEvent('load', function(){
