--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 			SqueezeBox.assign($$('a.modal'), {
 				parse: 'rel'
 			});
-		});var K2SitePath = 'index.html';window.addEvent('load', function() {
+		});
+var K2SitePath = 'index.html';
+window.addEvent('load', function() {
 				new JCaption('img.caption');
 			});
 				window.addEvent('load', function(){
@@ -424,30 +426,11 @@ margin-right:95%!important;
 <div style="text-align: right;"><span style="font-size: medium; font-family: arial,helvetica,sans-serif;"><strong><span style="font-size: medium; font-family: arial,helvetica,sans-serif;"><img src="images/stories/logo-icon.jpg" border="0" width="80" style="border: 0px currentColor; margin-right: 5px; margin-left: 5px; float: left;" /></span><span style="color: #333333; font-family: verdana,geneva;">נייד</span></strong><span style="color: #333333; font-family: verdana,geneva;">: 0544-737165</span></span></div>
 </li>
 <li>
-<div style="text-align: right;"><span style="color: #333333; font-family: verdana,geneva;"><span style="font-size: medium;"><strong>פקס</strong>: 153-54473716</span></span> </div>
+<div style="text-align: right;"><span style="color: #333333; font-family: verdana,geneva;"><span style="font-size: medium;"><strong>פקס</strong>: 0544737165</span></span> </div>
 </li>
 <li>
 <div style="text-align: right;"><span style="color: #333333; font-family: verdana,geneva;"><span style="font-size: medium;"><strong>דוא"ל:</strong> 
- <script type='text/javascript'>
- <!--
- var prefix = '&#109;a' + 'i&#108;' + '&#116;o';
- var path = 'hr' + 'ef' + '=';
- var addy69161 = 'cst&#111;n&#101;.fm' + '&#64;';
- addy69161 = addy69161 + 'gm&#97;&#105;l' + '&#46;' + 'c&#111;m';
- document.write('<a ' + path + '\'' + prefix + ':' + addy69161 + '\'>');
- document.write(addy69161);
- document.write('<\/a>');
- //-->\n </script><script type='text/javascript'>
- <!--
- document.write('<span style=\'display: none;\'>');
- //-->
- </script>This email address is being protected from spambots. You need JavaScript enabled to view it.
- <script type='text/javascript'>
- <!--
- document.write('</');
- document.write('span>');
- //-->
- </script></span></span></div>
+ </span></span></div>
 </li>
 <li>
 <div style="text-align: right;"><span style="color: #333333; font-family: verdana,geneva;"><span style="font-size: medium;"><strong>משרד</strong>: <span style="background-color: #ffffff;">אבו סנאן כביש ראשי פנימי מיקוד 24905 ת.ד 529</span></span></span></div>
